--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -312,7 +312,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .container { width:85%; }
   #masterslider .banner-text h2 {font-size:17px!important; letter-spacing:3px!important;}
   #masterslider .banner-text h1 {font-size:28px!important; letter-spacing:5px!important; line-height:29px!important;}
-  .breadcrumb {margin-top: 0; margin-bottom: -30px; padding-top: 30px; background: #F4F4F4;}
+  .breadcrumb {margin-top: 0; margin-bottom: -30px; padding-top: 30px;}
   .social_links {right: 10px;}
   h1.accommodation-name {font-size:24px; bottom:30px;}
   table {width: 100%;}
@@ -356,7 +356,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .accommodations .bx-wrapper, .locations .bx-wrapper {max-width:165px!important;}
   #welcome-locations .bx-viewport, #welcome-accommodation .bx-viewport {height:138px!important;}
   #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto!important;}
-  #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:248px!important;}
+  #locations-blog-container .banner-arrow, .blog_post .banner-arrow {display:none;}
   .blog_list {padding:0;}  
   .blog_locations {margin-top:30px;}
   #welcome-locations h2, #welcome-accommodation h2,.accommodation h2 {margin:30px 0;}
