--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -21,7 +21,8 @@
               <%= f.input :message, :wrapper => :bootstrap_12,:input_html  => {:rows=>6, :class => 'form-control' } %>
             </div>
             <div class="col-xs-12 col-sm-6">
-              <img src="/assets/captcha.png" class="img-responsive captcha">
+              <div class="captcha">
+              </div>
             </div>
             <div class="col-xs-12 col-sm-6">
               <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
