--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -72,6 +72,9 @@
       <div class="banner-overlay hidden-xs"><img class="img-responsive" src="/assets/banner-overlay.png"></div>
       <div class="ms-slide slide-1" data-delay="4">
         <%= image_fu(banner.image, "1920x935#c") %>
+        <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
+          <%= raw banner.name %>
+        </div>
       </div>
     <% end %>
   </div>
