--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -55,7 +55,7 @@
       <div class="ms-slide slide-1" data-delay="4">
         <%= image_fu(banner.image, "1920x935#c") %>
         <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <%= raw banner.name %>
+          <h1><%= raw banner.name %></h1>
         </div>
       </div>
     <% end %>
@@ -67,7 +67,7 @@
       <div class="ms-slide slide-1" data-delay="4">
         <%= image_fu(banner.image, "1920x935#c") %>
         <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <%= raw banner.name %>
+          <h1><%= raw banner.name %></h1>
         </div>
       </div>
     <% end %>
@@ -79,7 +79,7 @@
       <div class="ms-slide slide-1" data-delay="4">
         <%= image_fu(banner.image, "1920x935#c") %>
         <div class="ms-layer banner-text" data-type="text" data-delay="750" data-duration="2000" data-ease="easeOutExpo" data-resize="false">
-          <%= raw banner.name %>
+          <h1><%= raw banner.name %></h1>
         </div>
       </div>
     <% end %>
