--- a/app/views/refinery/blog/shared/_posts.html.erb
+++ b/app/views/refinery/blog/shared/_posts.html.erb
@@ -5,7 +5,7 @@
   <ul id="blog_posts">
     <% @posts.each do |blog_post| %>
       <li class='clearfix'>
-          <%= link_to(image_fu(blog_post.image, "105x80#c", :class=>"hidden-sm") + blog_post.title, refinery.blog_post_path(blog_post)) %> 
+          <%= link_to(image_fu(blog_post.image, "105x80#c", :alt => blog_post.image.alt_tag, :class=>"hidden-sm") + blog_post.title, refinery.blog_post_path(blog_post)) %>
       <div class="description"><%=raw truncate(blog_post.body, :length => 70) %></div>
       </li>
     <% end %>
