--- a/app/views/layouts/_accommodation_item.html.erb
+++ b/app/views/layouts/_accommodation_item.html.erb
@@ -90,7 +90,7 @@
           <a href="#camps">Back to Camp Selection</a>
           </div>
           <div class="col-xs-12">
-            <a type="button" class="btn btn-default btn-custom" data-toggle="modal" data-target="#myModal">Start Your Journey</a>
+            <a type="button" class="btn btn-default btn-custom" data-toggle="modal" data-target="#myModal">Enquire Now</a>
             <!-- Modal -->
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
               <div class="modal-dialog" role="document">
@@ -119,7 +119,7 @@
                               <%= f.input :message, :wrapper => :bootstrap_12,:input_html  => {:rows=>6, :class => 'form-control' } %>
                             </div>
                             <div class="col-xs-12 col-sm-6">
-                              <img src="/assets/captcha.png" class="img-responsive captcha">
+                              <div class="captcha"></div>
                             </div>
                             <div class="col-xs-12 col-sm-6">
                               <%= f.input :captcha, :wrapper => :bootstrap_12, :input_html => { :class => 'form-control' } %>
