--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -68,7 +68,7 @@
                 <ul class="footer_location_nav">
                   <% @menu_locations.each do |location| %>
                     <li>
-                      <%= link_to refinery.locations_location_path(location) do %>
+                      <%= link_to location_link(location) do %>
                         <%= image_fu location.flag_image, '35x35#c', :alt => location.flag_image.alt_tag, :class=>"img-circle" %><br>
                         <span><%= location.name %></span>
                       <% end %>
