--- a/app/views/refinery/_menu_branch.html.erb
+++ b/app/views/refinery/_menu_branch.html.erb
@@ -12,7 +12,7 @@
       <ul class="location_nav">
         <% @menu_locations.each do |location| %>
           <li>
-            <%= link_to refinery.locations_location_path(location) do %>
+            <%= link_to location_link(location) do %>
             <%= image_fu location.flag_image, '20x20#c', :class=>"img-circle" %>
             <span><%= location.name %></span>
             <% end %>
