--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -194,7 +194,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   h1,h2 {width:740px; color:#ffffff; margin:0 auto 50px auto;}
   h2 { margin-bottom:30px;}
   img.logo {display:block; margin:50px auto 80px auto;}
-  img.logos {display:block; margin:10px auto 0 auto;}
+  img.logos {display:block; margin:30px auto 0 auto;}
   span, a {color:#ffffff; font-size:8px; font-size:8px; text-transform:uppercase;}
 }
 
@@ -256,7 +256,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 
 .blog_list {background:#F4F4F4; padding:20px 0 70px 0;
   .blog_post {
-    .blog_post_pod {width:350px!important; position:relative; margin:0 auto 30px auto;
+    .blog_post_pod {width:350px; position:relative; margin:0 auto 30px auto;
       h2 {margin:0; font-size:14px; line-height:20px;}
       .content {background:#ffffff; padding:20px;
         .date {font-size: 12px; font-style: italic;}
@@ -314,15 +314,17 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 /*** xs ***/
 @media (max-width:767px) {
   .container {max-width:340px;}
-  .top-nav-container {background:#000000; width:100%;
-    .navbar-hamburger {position:static; width:21%; height:52px; padding:10px 20px 0 20px; border-bottom:1px solid #666666;
-        .bar1,.bar2,.bar3 {height:2px; margin-top:5px; width:25px;}
-    }
-    .top-nav {position:absolute; width:79%; right:0; margin:0; border-bottom:1px solid #666666;
-      a,a:hover {margin:0; line-height:51px; width:50%; padding:0;
-        .fa {margin:0;}
+  .header-partial {background: #000; border-bottom: 1px solid #666;
+    .top-nav-container {width: 340px; margin: 0 auto;
+      .navbar-hamburger {position:static; width:21%; height:50px; padding:10px 20px 0 20px;
+          .bar1,.bar2,.bar3 {height:2px; margin-top:5px; width:25px;}
       }
-      a:first-child {border-right:1px solid #666666;border-left:1px solid #666666;}
+      .top-nav {position:static; width:79%; right:0; margin:0; float:right;
+        a,a:hover {margin:0; line-height:50px; width:50%; padding:0;
+          .fa {margin:0;}
+        }
+        a:first-child {border-right:1px solid #666666;border-left:1px solid #666666;}
+      }
     }
   }
   #masterslider .banner-text h2 {font-size:17px!important; letter-spacing:3px!important;}
@@ -335,10 +337,10 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   nav ul h2 {margin:0!important; padding:5px 0;}
   nav ul h2 a,nav ul h2 span {font-size:12px;}  
   nav ul li.parent ul { margin-top:0;}
-  nav ul .location_nav {margin-left:0; padding:0; max-width:100px;}
+  nav ul .location_nav {margin-left:0; padding:0; max-width:100px; padding:20px 0;}
   nav ul .location_nav img {margin-right:5px;}
-  nav ul .location_nav li {line-height:24px;}
-  nav ul .location_nav.open {height:auto;column-count:1;}  
+  nav ul .location_nav li {line-height:30px;}
+  nav ul .location_nav.open {height:auto;-webkit-column-count: 1; -moz-column-count: 1; column-count: 1;}  
   nav ul .location_nav.open li a span { font-size: 11px;}
   #sb-search {display: none;}
   .banner {position:relative;}
@@ -350,7 +352,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   h3 {line-height:24px; margin:30px 0;}
   .div1,.div2,.div3 {opacity:1;}
   h1,h2,p,ul {width:100%!important;}
-  .read_more {margin-top:30px;}
+  .read_more {margin: 30px 55px 0 55px;}
   #welcome, #locations, #contact, #people, #countries, #locations-blog-container, #welcome-locations, #welcome-accomodation,.accommodation {padding:0!important;}
   .content-container .content h1, .content-container .content h2 {margin:30px 0;}
   #people { background: #489AF0;}
