--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -371,7 +371,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .accommodations .bx-wrapper, .locations .bx-wrapper {max-width:165px!important;}
   #welcome .locations .bx-viewport, #welcome .accommodations .bx-viewport, #contact .locations .bx-viewport, #contact .accommodations .bx-viewport, .modal .locations .bx-viewport, .modal .accommodations .bx-viewport {height:auto!important;}
   .bx-viewport .slide a .name {margin:10px 0!important;}
-  #locations_slider,#accommodationss_slider {width:auto!important;}
+  #locations_slider,#accommodations_slider {width:auto!important;}
   .bx-prev,.bx-next {display:none;}
   #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto!important;}
   #locations-blog-container .banner-arrow, .blog_post .banner-arrow {display:none;}
