--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -1,13 +1,13 @@
 <div class="header-partial">
 <div class="top-nav-container">
   <div class="top-nav">
-    <a href="tel:+447809726266" class="btn btn-default btn-custom"><i class="fa fa-phone"></i><span class="hidden-xs">+ 44 7809 726266</span></a><a class="btn btn-default btn-custom" data-toggle="modal" data-target="#myModal"><i class="fa fa-envelope"></i><span class="hidden-xs">Enquire Now</span></a>
+    <a href="tel:+447809726266" class="btn btn-default btn-custom"><i class="fa fa-phone"></i><span class="visible-xs">CALL</span><span class="hidden-xs">+ 44 7809 726266</span></a><a class="btn btn-default btn-custom" data-toggle="modal" data-target="#myModal"><i class="fa fa-envelope"></i><span>Enquire Now</span></a>
   </div>
   <div class="navbar-hamburger">
     <div class="bar1"></div>
     <div class="bar2"></div>
     <div class="bar3"></div>
-    <span class="hidden-xs">MENU</span>
+    <span>MENU</span>
   </div>
 </div>
 </div>
