--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -316,12 +316,13 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .container {max-width:340px;}
   .header-partial {background: #000; border-bottom: 1px solid #666;
     .top-nav-container {width: 340px; margin: 0 auto;
-      .navbar-hamburger {position:static; width:21%; height:50px; padding:10px 20px 0 20px;
+      .navbar-hamburger {position:static; width:21%; height:50px; padding:5px 20px 5px 20px;
           .bar1,.bar2,.bar3 {height:2px; margin-top:5px; width:25px;}
+          span {margin:0 0 0 -5px; font-size:9px;}
       }
       .top-nav {position:static; width:79%; right:0; margin:0; float:right;
-        a,a:hover {margin:0; line-height:50px; width:50%; padding:0;
-          .fa {margin:0;}
+        a,a:hover {margin:0; width:50%; padding:0; font-size:9px;
+          .fa {display:block; margin: 0 0 7px 0; padding-top: 7px;}
         }
         a:first-child {border-right:1px solid #666666;border-left:1px solid #666666;}
       }
