--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,9 +53,9 @@ table {width: 65%; margin: 0 auto; border: 1px solid #eeeeee; margin-bottom: 30p
   td {border-right: 1px solid #eeeeee;}
 }
 
-nav, .navbar-hamburger {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;text-align: center;}
+nav, .navbar-hamburger {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;text-align: center; z-index:99999;}
 
-nav {position:absolute; z-index: 15; background-color: rgba(0,0,0, 0.85); width: 100%; min-height: 100%;
+nav {position:absolute; z-index: 15; background-color: rgba(0,0,0, 0.85); width: 100%; min-height: 100%; z-index: 9999;
   ul {list-style:none; margin:0; padding:150px 0 0 0; vertical-align: middle; display:inline-block; text-align:center; width:740px;
     li.first {padding-top:25px;}
     li.parent {line-height:0;}
@@ -84,7 +84,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .bar2 { background-color: transparent; }
 }
 
-.top-nav {position: fixed; z-index:20; right:100px; margin:12px 0 0 0;
+.top-nav {position: fixed; z-index:20; right:100px; margin:12px 0 0 0; z-index:99999;
   .btn-custom,.btn-custom:hover { background:rgba(0, 0, 0, 0.85); border-radius:0; border:0; color:#ffffff; margin-left:10px; font-size:11px; text-transform:uppercase; line-height:18px;
     .fa {margin-right:10px;}
   }
