--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -53,7 +53,7 @@ table {width: 65%; margin: 0 auto; border: 1px solid #eeeeee; margin-bottom: 30p
   td {border-right: 1px solid #eeeeee;}
 }
 
-nav, .navbar-hamburger {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;text-align: center; z-index:99999;}
+nav, .navbar-hamburger {-webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;text-align: center;}
 
 nav {position:absolute; z-index: 15; background-color: rgba(0,0,0, 0.85); width: 100%; min-height: 100%; z-index: 9999;
   ul {list-style:none; margin:0; padding:150px 0 0 0; vertical-align: middle; display:inline-block; text-align:center; width:740px;
@@ -72,7 +72,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 
 .nav-hide {display: none;}
 
-.navbar-hamburger { position: fixed; top: 0; right: 0; width: 70px; height: 70px; z-index: 20; cursor: pointer; background:rgba(0, 0, 0, 0.85); padding:10px 20px 20px 20px;
+.navbar-hamburger { position: fixed; top: 0; right: 0; width: 70px; height: 70px; z-index: 20; cursor: pointer; background:rgba(0, 0, 0, 0.85); padding:10px 20px 20px 20px; z-index:99999;
   .bar1, .bar2, .bar3 { width: 100%; height: 3px; margin-top: 6px; background-color: #ffffff; transition: all 0.3s ease-in-out;}
   span {color:#ffffff; margin-left:-1px; font-size:11px;}
 }
