--- a/app/views/refinery/_head.html.erb
+++ b/app/views/refinery/_head.html.erb
@@ -1,9 +1,18 @@
 <head>
   <meta charset='<%= Rails.application.config.encoding %>' />
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
-  <title><%= browser_title(yield(:title)) %></title>
-  <%= raw(%(<meta name="description" content="#{@meta.meta_description}" />)) if @meta.meta_description.present? -%>
-  <%= raw(%(<meta name="keywords" content="#{@meta.meta_keywords}">)) if @meta.meta_keywords.present? -%>
+  <% if @location.present? and @location.browser_title.present? %>
+    <title><%= browser_title(@location.browser_title) %></title>
+    <%= raw(%(<meta name="description" content="#{@location.meta_description}" />)) if @location.meta_description.present? -%>
+  <% elsif @accommodation.present? and @accommodation.browser_title.present?  %>
+    <title><%= browser_title(@accommodation.browser_title) %></title>
+    <%= raw(%(<meta name="description" content="#{@accommodation.meta_description}" />)) if @accommodation.meta_description.present? -%>
+  <% else %>
+    <title><%= browser_title(yield(:title)) %></title>
+    <%= raw(%(<meta name="description" content="#{@meta.meta_description}" />)) if @meta.meta_description.present? -%>
+    <%= raw(%(<meta name="keywords" content="#{@meta.meta_keywords}">)) if @meta.meta_keywords.present? -%>
+  <% end %>
+
   <%= raw(%(<link rel="canonical" content="#{@canonical}" />)) if @canonical.present? -%>
   <%= csrf_meta_tags if Refinery::Core.authenticity_token_on_frontend -%>
   <!-- Chrome, Firefox OS and Opera -->
