--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,7 +30,8 @@
 
 .div1,.div2,.div3 { opacity:0; filter:alpha(opacity=0); }
 
-body { @include main_font(); font-size:14px; line-height:28px; overflow-x:hidden; text-align:center;}
+body { @include main_font(); font-size:14px; line-height:28px; overflow-x:hidden; text-align:center;margin:0px; padding:0px; }
+body.modal-open {overflow:auto; margin-right:0!important; transform:none!important;}
 
 h1 {@include header_font(); font-size:24px; letter-spacing:2px; text-transform: uppercase; margin:50px 0; line-height:18px;}
 h2 {@include header_font(); font-size:16px; letter-spacing:2px; text-transform: uppercase; margin:50px 0; line-height:16px;}
@@ -88,7 +89,6 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   .btn-custom,.btn-custom:hover { background:rgba(0, 0, 0, 0.85); border-radius:0; border:0; color:#ffffff; margin-left:10px; font-size:11px; text-transform:uppercase; line-height:18px;
     .fa {margin-right:10px;}
   }
-
   .fa {font-size:18px;}
 }
 
@@ -190,9 +190,48 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   span {display:block; line-height:18px;}
 }
 
+.bookings {font-size:13px; line-height:24px;
+  .row {margin:0;}
+  .no-gutter {padding:0 1px;}
+  .personal,.passport,.flights,.insurance,.requests,.emergency,.acceptance {background:#f4f4f4; padding:25px 15px; margin-bottom:30px; text-align:left;}
+  .passport, .flights {
+    .fields {position:relative; margin-bottom:20px;
+      .select {background:#ffffff; margin-bottom:2px;}
+      label {background:#ffffff; height:43px; line-height:43px; width:49%; padding:0 10px;}
+      .diet {width:100%;}
+      .arrival,.departure {width:49%; }
+      span {width:20px; height:20px; line-height:17px; text-align:center; background:#a30000; border-radius:50%; position: absolute; top: -10px; right: -10px;
+        a {color:#ffffff; display:block;}
+      }
+    }
+    .link {background: #000; color: #fff; height: 30px; margin-bottom: 5px; display: inline-block; width: 130px; text-align: center; line-height: 30px;}
+  }
+
+  h2 {margin:20px 0 30px 0; text-align:center;}
+  p {width:auto;}
+  form {width:740px; margin:0 auto;
+    h2 {margin:20px 0 30px 0; text-align:center;}
+    p {width:auto;}
+    label {font-weight:400; margin-bottom:2px;}
+    input,textarea {width:100%; padding:10px; margin-bottom:2px!important;}
+    input[type="checkbox"] {float: left; width: auto; margin: 0 10px 0 0;}
+    textarea {height:90px;}
+    select {height:43px; border:none; font-size:13px; padding:0 4px;}
+    .dont_get_newsletters_field label, .certify_personal_insurance_field label, .i_accept_field label, {width:95%; margin-top:9px;}
+    .honeymoon_field label, .birthday_field label,.anniversary_field label  {margin-top:9px;}
+    .btn-custom {background: #000; border-radius: 0; border: 0; height: 44px; width:200px; color: #fff; margin-top:0!important;}
+    ::-webkit-input-placeholder {font-weight: 400; color: #999999; font-size: 13px!important;}
+    :-moz-placeholder {font-weight: 400; color: #999999; font-size: 13px!important;}
+    ::-moz-placeholder {font-weight: 400; color: #999999; font-size: 13px!important;}
+    :-ms-input-placeholder {font-weight: 400; color: #999999; font-size: 13px!important;}
+  }
+  .uppercase {width: 100%!important; text-transform: uppercase;}
+}
+
 .content-container .content {@include vertical-align(); color:#ffffff;
   h1,h2 {width:740px; color:#ffffff; margin:0 auto 50px auto;}
   h2 { margin-bottom:30px;}
+  img.bottom-logo {margin:40px auto;}
   img.logo {display:block; margin:50px auto 80px auto;}
   img.logos {display:block; margin:30px auto 0 auto;}
   span, a {color:#ffffff; font-size:8px; font-size:8px; text-transform:uppercase;}
@@ -309,7 +348,18 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   }
 }
 
-.content img.bottom-logo {margin:40px auto;}
+/*** MODAL ***/
+
+.modal-dialog {width:940px;
+  .modal-content {border-radius:0; box-shadow: none;
+    .modal-header {border:none;}
+    .modal-body {padding:20px 20px 100px 20px;
+      .contact-form {
+        input,textarea {border:1px solid #e7e7e7!important;}
+      }
+    }
+  }
+}
 
 /*** xs ***/
 @media (max-width:767px) {
@@ -370,6 +420,7 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
   #locations .streetchild {width:auto;}
   #locations ul { -webkit-column-count: 1;}
   .accommodations .bx-wrapper, .locations .bx-wrapper {max-width:165px!important;}
+  
   #welcome .locations .bx-viewport, #welcome .accommodations .bx-viewport, #contact .locations .bx-viewport, #contact .accommodations .bx-viewport, .modal .locations .bx-viewport, .modal .accommodations .bx-viewport {height:auto!important;}
   .bx-viewport .slide {margin-right:0!important;}
   .bx-viewport .slide a .name {margin:10px 0!important;}
@@ -405,7 +456,6 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 /*** sm ***/
 
 @media (min-width:768px) and (max-width: 991px) {
-  // .container {width: 750px;}
   p,form,#people .content-container .content h2, .street-child, .contact-form span, #welcome ul,.content-container .content h1 {width:100%!important;}
   #people .content-container .content .street-child {padding: 30px 0 0 0;}
   #people .content-container .content .street-child img {margin-right:13px;}
@@ -423,7 +473,6 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 /*** md ***/
 
 @media (min-width:992px) and (max-width:1199px) {
-  #container {transform:none!important;}
   .container {width: 970px;}
   #locations-blog-container .blog-post , .blog_post .blog_post_pod {width:auto!important;}
   #locations-blog-container .banner-arrow, .blog_post .banner-arrow {top:221px!important;}
@@ -432,63 +481,5 @@ nav:before { content: ''; display: inline-block; height: 100%; vertical-align: m
 
 /*** lg ***/
 @media (min-width: 1200px) {
-  #container {transform:none!important;}
   .container {width: 1170px;}
 }
-
-/*** Enforce landscape view ***/
-
-#container { display:block; }
-
-.modal-dialog {width:940px;
-  .modal-content {border-radius:0; box-shadow: none;
-    .modal-header {border:none;}
-    .modal-body {padding:20px 20px 100px 20px;
-      .contact-form {
-        input,textarea {border:1px solid #e7e7e7!important;}
-      }
-    }
-  }
-}
-
-body.modal-open {overflow:auto; margin-right:0!important; transform:none!important;}
-body { margin:0px; padding:0px; } 
-
-.bookings {font-size:13px; line-height:24px;
-  .row {margin:0;}
-  .no-gutter {padding:0 1px;}
-  .personal,.passport,.flights,.insurance,.requests,.emergency,.acceptance {background:#f4f4f4; padding:25px 15px; margin-bottom:30px; text-align:left;}
-  .passport, .flights {
-    .fields {position:relative; margin-bottom:20px;
-      .select {background:#ffffff; margin-bottom:2px;}
-      label {background:#ffffff; height:43px; line-height:43px; width:49%; padding:0 10px;}
-      .diet {width:100%;}
-      .arrival,.departure {width:49%; }
-      span {width:20px; height:20px; line-height:17px; text-align:center; background:#a30000; border-radius:50%; position: absolute; top: -10px; right: -10px;
-        a {color:#ffffff; display:block;}
-      }
-    }
-    .link {background: #000; color: #fff; height: 30px; margin-bottom: 5px; display: inline-block; width: 130px; text-align: center; line-height: 30px;}
-  }
-
-  h2 {margin:20px 0 30px 0; text-align:center;}
-  p {width:auto;}
-  form {width:740px; margin:0 auto;
-    h2 {margin:20px 0 30px 0; text-align:center;}
-    p {width:auto;}
-    label {font-weight:400; margin-bottom:2px;}
-    input,textarea {width:100%; padding:10px; margin-bottom:2px!important;}
-    input[type="checkbox"] {float: left; width: auto; margin: 0 10px 0 0;}
-    textarea {height:90px;}
-    select {height:43px; border:none; font-size:13px; padding:0 4px;}
-    .dont_get_newsletters_field label, .certify_personal_insurance_field label, .i_accept_field label, {width:95%; margin-top:9px;}
-    .honeymoon_field label, .birthday_field label,.anniversary_field label  {margin-top:9px;}
-    .btn-custom {background: #000; border-radius: 0; border: 0; height: 44px; width:200px; color: #fff; margin-top:0!important;}
-    ::-webkit-input-placeholder {font-weight: 400; color: #999999; font-size: 13px!important;}
-    :-moz-placeholder {font-weight: 400; color: #999999; font-size: 13px!important;}
-    ::-moz-placeholder {font-weight: 400; color: #999999; font-size: 13px!important;}
-    :-ms-input-placeholder {font-weight: 400; color: #999999; font-size: 13px!important;}
-  }
-  .uppercase {width: 100%!important; text-transform: uppercase;}
-}
-
