--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -2,7 +2,7 @@
 <%= render '/refinery/html_tag' %>
   <% site_bar = render('/refinery/site_bar', :head => true) -%>
   <%= render '/refinery/head' %>
-  <body id="container">
+  <body>
 
 
 
